--- a/mogo-apps-ios/add-withdraw-saving/addWithdrawStoryboard.storyboard
+++ b/mogo-apps-ios/add-withdraw-saving/addWithdrawStoryboard.storyboard
@@ -119,6 +119,9 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="a3M-xe-wl6">
                             <color key="tintColor" red="0.093237645920000001" green="0.47508078809999998" blue="0.43137091399999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <connections>
+                                <action selector="saveButtonAction:" destination="4Zn-sW-yDF" id="cbo-cb-prG"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
