--- a/mogo-apps-ios/create-goals/create-goals cell/CreateGoalInputCell.xib
+++ b/mogo-apps-ios/create-goals/create-goals cell/CreateGoalInputCell.xib
@@ -40,7 +40,10 @@
                                     <constraint firstAttribute="width" constant="21.670000000000002" id="khc-wT-CSU"/>
                                 </constraints>
                                 <color key="tintColor" red="0.086274509799999996" green="0.47450980390000003" blue="0.43137254899999999" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" image="lock.fill" catalog="system"/>
+                                <state key="normal" image="cool"/>
+                                <connections>
+                                    <action selector="imageAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="yhp-H0-9WB"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -73,7 +76,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="lock.fill" catalog="system" width="128" height="128"/>
+        <image name="cool" width="512" height="512"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
