--- a/mogo-apps-ios/goal-update/OverlayView.xib
+++ b/mogo-apps-ios/goal-update/OverlayView.xib
@@ -106,7 +106,7 @@
                 <constraint firstItem="nwi-Sr-ugT" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="znh-1K-O0j"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-301.44927536231887" y="-0.33482142857142855"/>
+            <point key="canvasLocation" x="-703" y="-44"/>
         </view>
     </objects>
     <resources>
