--- a/mogo-apps-ios/create-goals/create-goals cell/CreateGoalActionCell.xib
+++ b/mogo-apps-ios/create-goals/create-goals cell/CreateGoalActionCell.xib
@@ -35,9 +35,6 @@
                         <state key="normal" title="Button">
                             <color key="titleColor" red="0.086274509799999996" green="0.47450980390000003" blue="0.43137254899999999" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
-                        <connections>
-                            <action selector="pickerbutton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="md3-R8-Yd7"/>
-                        </connections>
                     </button>
                 </subviews>
                 <constraints>
@@ -50,7 +47,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="buttonTarget" destination="M3a-3K-y0u" id="0oa-rc-Q6G"/>
+                <outlet property="buttonTarget" destination="M3a-3K-y0u" id="sDs-t8-uiw"/>
                 <outlet property="titleLabel" destination="awO-7i-c43" id="bAT-2T-8ve"/>
             </connections>
             <point key="canvasLocation" x="132" y="124"/>
