--- a/mogo-apps-ios/goal-detail/GoalDetail.storyboard
+++ b/mogo-apps-ios/goal-detail/GoalDetail.storyboard
@@ -74,6 +74,9 @@
                                                 <state key="normal" title="Withdraw">
                                                     <color key="titleColor" red="0.086274509799999996" green="0.47450980390000003" blue="0.43137254899999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="withdrawButton:" destination="tQt-9S-hGW" eventType="touchUpInside" id="SXR-t9-d76"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" red="0.93333333330000001" green="0.93333333330000001" blue="0.93725490199999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
