add withdraw & connect to page goal detail (2)

--- a/mogo-apps-ios/add-withdraw-saving/withdraw.storyboard
+++ b/mogo-apps-ios/add-withdraw-saving/withdraw.storyboard
@@ -75,7 +75,7 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits"/>
                                         <connections>
-                                            <outlet property="delegate" destination="aIZ-Ca-Tgf" id="s4M-1w-ZQd"/>
+                                            <outlet property="delegate" destination="NJ6-bp-64E" id="Kcb-ST-4mB"/>
                                         </connections>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4TY-oU-YF0">
